--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'DRACO';
+			content: 'Dahlhues';
 		}
 	</style>
 </head>
@@ -26,7 +26,7 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">DRACO</span>
+				    <span class="logo">Jan</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
@@ -43,13 +43,13 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hello, I'm Jan Hendrik</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I live in<br><span id="typed"></span></h1>
+					<h1>I am interested in<br><span id="typed"></span></h1>
 				</div>
 				<p>
 					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
@@ -63,14 +63,16 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
+				<li>September 2023 - July 2024</li>
+				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li>Specialist System Development / Network Engineer</li>
+				<li>Tasks: DNS-System configurations, Automation of network tasks using Ansible / Python, Implementation of IPv6, Training of new employees</li>
+
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
+				<li>August 2019 – September 2023</li>
+				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li>Dual Study / Network Engineer</li>
 			</ul>
 			<ul class="work-list">
 				<li>2014-2015</li>
@@ -79,6 +81,7 @@
 			</ul>
 		</div>
 	</div>
+
 
 	<!-- Award & Achievements -->
 	<div class="award section second" id="achievements">
@@ -155,7 +158,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["Innovation", "Computer Science", "Psychology"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
