--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Draco by @afnizarnur</title>
+    <title>Jan Hendrik Dahlhues CV</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
@@ -26,15 +26,16 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">Jan</span>
+				    <span class="logo">Jan Hendrik Dahlhues</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
 				        <li class="active"><a href="#about">About</a></li>
 				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
 				        <li><a href="#skills">Skills</a></li>
-				    </ul>
+						<li><a href="#others">Others</a></li>
+
+					</ul>
 				</nav>
 			</header>
 		</div>
@@ -52,7 +53,7 @@
 					<h1>I am interested in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					Todo
 				</p>
 			</div>
 		</div>
@@ -66,42 +67,58 @@
 				<li>September 2023 - July 2024</li>
 				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
 				<li>Specialist System Development / Network Engineer</li>
-				<li>Tasks: DNS-System configurations, Automation of network tasks using Ansible / Python, Implementation of IPv6, Training of new employees</li>
+				<li>Tasks:
+					<br> - DNS-System configurations
+					<br> - Automation of network tasks using Ansible / Python
+					<br> - Implementation of IPv6
+					<br> - Training of new employees</li>
 
 			</ul>
 			<ul class="work-list">
-				<li>August 2019 – September 2023</li>
+				<li>August 2019 - September 2023</li>
 				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
 				<li>Dual Study / Network Engineer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+				<li>Tasks:
+					<br> - Work, study and training in the field of IT
+					<br> - Specialization on the field of network engineering</li>
 			</ul>
 		</div>
 	</div>
 
-
-	<!-- Award & Achievements -->
-	<div class="award section second" id="achievements">
+	<!-- Eduction -->
+	<div class="work section second" id="experiences">
 		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
-			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+			<h1>Education</h1>
+			<ul class="work-list">
+				<li>August 2024 - present</li>
+				<li><a href="#">EIT Digital Master’s Programme (Double Degree)</a></li>
+				<li>Studies: Cloud and Network Infrastructure M.Sc</li>
+				<li>Major: Cloud and Network Infrastructure
+					<br>Minor: Innovation and Entrepreneurship
+					<br><br>Entry year: KTH Royal Institute of Technology, Stockholm
+					<br>Exit year: Aalto University, Helsinki
+					<br><br>EIT Scholarship (EU Excellence nomination)
+					</li>
 			</ul>
-			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
+			<ul class="work-list">
+				<li>August 2024 - present</li>
+				<li><a href="#">KTH Royal Institute of Technology</a></li>
+				<li>Studies: ICT Innovation M.Sc</li>
+				<li>EIT Digital Master’s Programme (Double Degree) in "Cloud and Network Infrastructure" (CNI), entry University</li>
 			</ul>
-			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+			<ul class="work-list">
+				<li>October 2020 - September 2023</li>
+				<li><a href="#">FH Münster University of Applied Sciences</a></li>
+				<li>Studies: Computer Science B.Sc</li>
+				<li>Topic of the bachelor's thesis: "IPv6@LVM: Evaluation of the
+					use of IPv6 in a dual-stack implementation and proof of concept
+					of an HTTP proxy server as a transition mechanism”</li>
+			</ul>
+			<ul class="work-list">
+				<li>August 2019 - January 2022</li>
+				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li>Training: state-certified IT specialist for system integration</li>
+				<li>Topic of the thesis: “Installed and configured new data center switches and automated network tests using Ansible”</li>
 			</ul>
 		</div>
 	</div>
@@ -109,26 +126,54 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
+			<h1>Skills</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>Automation</li>
+				<li>Ansible</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>Network communication</li>
+				<li>Routing & Switching/ BGP / UDP & TCP / IPv4 & IPv6 / EVPN-VXLAN</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Systems</li>
+				<li>DNS / DHCP / Linux</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Programming languages</li>
+				<li>Java / C / Python / "Matlab"</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Natural languages</li>
+				<li>German / English / Swedish (basics)</li>
 			</ul>
 		</div>
 	</div>
 
+	<!-- Award & Achievements -->
+	<div class="award section second" id="others">
+		<div class="container">
+			<h1>Other Qualifications</h1>
+			<ul class="award-list list-flat">
+				<li>February 2025 - present</li>
+				<li>Volunteer work: EIT student ambassador</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>November 2023</li>
+				<li>Professional English (TOEFL iBT Score: 93)</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>September 2023</li>
+				<li>Trainer certificate (IHK Nord Westfalen)</li>
+			</ul>
+		</div>
+	</div>
+
+
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>Seeking discomfort.</h1>
 		</div>
 	</div>
 
@@ -136,14 +181,11 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="mailto:janhendrik_d@gmx.de"><i class="fa fa-send"></i></a></li>
+						<li><a href="https://linkedin.com/in/dahlhues"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 			    </div>
 			</div>
