--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Jan Hendrik Dahlhues CV</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
+    <meta name="description" content="Jan Hendrik Dahlhues CV">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/kube.min.css" />
