--- a/index.html
+++ b/index.html
@@ -53,19 +53,22 @@
 					<h1>I am interested in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Todo
+					I have a strong background in network engineering, with experience in automation, IPv6 deployment, and infrastructure management. I enjoy working on innovative solutions that improve efficiency and scalability. Beyond my technical skills, I’m interested in management and entrepreneurship, always looking for ways to improve teamwork and decision-making.
+					In my free time, I like traveling, playing tennis, and learning about psychology.
+					I actively live out of my comfort zone and tend to be idealistic and megalomaniacal.
+					<br><br>I'm currently located in Stockholm. Next year I will move to Helsinki.
 				</p>
 			</div>
 		</div>
 	</div>
 
 	<!-- Work Experience -->
-	<div class="work section second" id="experiences">
+	<div class="work section second" id="experiences2">
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
 				<li>September 2023 - July 2024</li>
-				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li><a href="https://www.lvm.de">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
 				<li>Specialist System Development / Network Engineer</li>
 				<li>Tasks:
 					<br> - DNS-System configurations
@@ -76,7 +79,7 @@
 			</ul>
 			<ul class="work-list">
 				<li>August 2019 - September 2023</li>
-				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li><a href="https://www.lvm.de">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
 				<li>Dual Study / Network Engineer</li>
 				<li>Tasks:
 					<br> - Work, study and training in the field of IT
@@ -85,13 +88,13 @@
 		</div>
 	</div>
 
-	<!-- Eduction -->
+	<!-- Education -->
 	<div class="work section second" id="experiences">
 		<div class="container">
 			<h1>Education</h1>
 			<ul class="work-list">
 				<li>August 2024 - present</li>
-				<li><a href="#">EIT Digital Master’s Programme (Double Degree)</a></li>
+				<li><a href="https://www.eitdigital.eu">EIT Digital Master’s Programme (Double Degree)</a></li>
 				<li>Studies: Cloud and Network Infrastructure M.Sc</li>
 				<li>Major: Cloud and Network Infrastructure
 					<br>Minor: Innovation and Entrepreneurship
@@ -102,13 +105,13 @@
 			</ul>
 			<ul class="work-list">
 				<li>August 2024 - present</li>
-				<li><a href="#">KTH Royal Institute of Technology</a></li>
+				<li><a href="https://www.kth.se">KTH Royal Institute of Technology</a></li>
 				<li>Studies: ICT Innovation M.Sc</li>
 				<li>EIT Digital Master’s Programme (Double Degree) in "Cloud and Network Infrastructure" (CNI), entry University</li>
 			</ul>
 			<ul class="work-list">
 				<li>October 2020 - September 2023</li>
-				<li><a href="#">FH Münster University of Applied Sciences</a></li>
+				<li><a href="https://www.fh-muenster.de/de/">FH Münster University of Applied Sciences</a></li>
 				<li>Studies: Computer Science B.Sc</li>
 				<li>Topic of the bachelor's thesis: "IPv6@LVM: Evaluation of the
 					use of IPv6 in a dual-stack implementation and proof of concept
@@ -116,7 +119,7 @@
 			</ul>
 			<ul class="work-list">
 				<li>August 2019 - January 2022</li>
-				<li><a href="#">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
+				<li><a href="https://www.lvm.de">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
 				<li>Training: state-certified IT specialist for system integration</li>
 				<li>Topic of the thesis: “Installed and configured new data center switches and automated network tests using Ansible”</li>
 			</ul>
@@ -200,7 +203,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Innovation", "Computer Science", "Psychology"],
+		strings: ["Innovation", "Informatics", "Management", "Psychology"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
