--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Innovation", "Informatics", "Management", "Psychology"],
+		strings: ["Innovation", "IT / CS", "Management", "Psychology"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
