--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					I have a strong background in network engineering, with experience in automation, IPv6 deployment, and infrastructure management. I enjoy working on innovative solutions that improve efficiency and scalability. Beyond my technical skills, I’m interested in management and entrepreneurship, always looking for ways to improve teamwork and decision-making.
 					In my free time, I like traveling, playing tennis, and learning about psychology.
 					I actively live out of my comfort zone and tend to be idealistic and megalomaniacal.
-					<br><br>I'm currently located in Stockholm. Next year I will move to Helsinki.
+					<br><br>I'm currently located in Stockholm. Soon, I will move to Helsinki.
 				</p>
 			</div>
 		</div>
@@ -66,6 +66,11 @@
 	<div class="work section second" id="experiences2">
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
+			<ul class="work-list">
+				<li>June 2025 - present</li>
+				<li><a href="https://www.ericsson.com">Ericsson</a></li>
+				<li>R&D Intern - Software Defined Infrastructures (SDI)</li>
+			</ul>
 			<ul class="work-list">
 				<li>September 2023 - July 2024</li>
 				<li><a href="https://www.lvm.de">LVM Landwirtschaftlicher Versicherungsverein Münster a.G.</a></li>
