some ericsson change

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<p>
 					I have a strong background in network engineering, with experience in automation, IPv6 deployment, and infrastructure management. I enjoy working on innovative solutions that improve efficiency and scalability. Beyond my technical skills, I’m interested in management and entrepreneurship, always looking for ways to improve teamwork and decision-making.
-					In my free time, I like traveling, playing tennis, and learning about psychology.
+					In my free time, I like traveling, playing tennis, and learning about psychology and languages.
 					I actively live out of my comfort zone and tend to be idealistic and megalomaniacal.
 					<br><br>I'm currently located in Stockholm. Soon, I will move to Helsinki.
 				</p>
@@ -70,6 +70,10 @@
 				<li>June 2025 - present</li>
 				<li><a href="https://www.ericsson.com">Ericsson</a></li>
 				<li>R&D Intern - Software Defined Infrastructures (SDI)</li>
+				<li>Tasks:
+					<br> - Developed a NETCONF load generator to simulate configuration traffic and test system performance.
+					<br> - Analyzed process dependencies in a large-scale system using statistical methods.
+					<br> - Applied techniques such as Granger causality tests, VAR models, and L1/L2 regularized regression for dependency analysis.</li>
 			</ul>
 			<ul class="work-list">
 				<li>September 2023 - July 2024</li>
@@ -141,7 +145,7 @@
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Network communication</li>
-				<li>Routing & Switching/ BGP / UDP & TCP / IPv4 & IPv6 / EVPN-VXLAN</li>
+				<li>Routing & Switching/ BGP / UDP & TCP / IPv4 & IPv6 / EVPN-VXLAN / NETCONF</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Systems</li>
@@ -153,7 +157,7 @@
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Natural languages</li>
-				<li>German / English / Swedish (basics)</li>
+				<li>German / English / Swedish (basics) / Mandarin (basics)</li>
 			</ul>
 		</div>
 	</div>
