aalto and ericsson update

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					I have a strong background in network engineering, with experience in automation, IPv6 deployment, and infrastructure management. I enjoy working on innovative solutions that improve efficiency and scalability. Beyond my technical skills, I’m interested in management and entrepreneurship, always looking for ways to improve teamwork and decision-making.
 					In my free time, I like traveling, playing tennis, and learning about psychology and languages.
 					I actively live out of my comfort zone and tend to be idealistic and megalomaniacal.
-					<br><br>I'm currently located in Stockholm. Soon, I will move to Helsinki.
+					<br><br>I'm currently located in Helsinki.
 				</p>
 			</div>
 		</div>
@@ -67,7 +67,12 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>June 2025 - present</li>
+				<li>August 2025 - present</li>
+				<li><a href="https://www.ericsson.com">Ericsson</a></li>
+				<li>Student Worker - Software Defined Infrastructures (SDI)</li>
+			</ul>
+			<ul class="work-list">
+				<li>June 2025 - August 2025</li>
 				<li><a href="https://www.ericsson.com">Ericsson</a></li>
 				<li>R&D Intern - Software Defined Infrastructures (SDI)</li>
 				<li>Tasks:
@@ -113,7 +118,13 @@
 					</li>
 			</ul>
 			<ul class="work-list">
-				<li>August 2024 - present</li>
+				<li>September 2025 - present</li>
+				<li><a href="https://www.aalto.fi/">Aalto University</a></li>
+				<li>Studies: ICT Innovation M.Sc</li>
+				<li>EIT Digital Master’s Programme (Double Degree) in "Cloud and Network Infrastructure" (CNI), exit University</li>
+			</ul>
+			<ul class="work-list">
+				<li>August 2024 - August 2025</li>
 				<li><a href="https://www.kth.se">KTH Royal Institute of Technology</a></li>
 				<li>Studies: ICT Innovation M.Sc</li>
 				<li>EIT Digital Master’s Programme (Double Degree) in "Cloud and Network Infrastructure" (CNI), entry University</li>
