--- a/index.html
+++ b/index.html
@@ -67,13 +67,18 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>August 2025 - present</li>
-				<li><a href="https://www.ericsson.com">Ericsson</a></li>
+				<li>November 2025 - present</li>
+				<li><a href="https://www.ericsson.com">Ericsson - Finland</a></li>
+				<li>Software Developer Trainee - Cloud Container Distribution (CCD)</li>
+			</ul>
+			<ul class="work-list">
+				<li>August 2025 - October 2025</li>
+				<li><a href="https://www.ericsson.com">Ericsson - Sweden</a></li>
 				<li>Student Worker - Software Defined Infrastructures (SDI)</li>
 			</ul>
 			<ul class="work-list">
 				<li>June 2025 - August 2025</li>
-				<li><a href="https://www.ericsson.com">Ericsson</a></li>
+				<li><a href="https://www.ericsson.com">Ericsson - Sweden</a></li>
 				<li>R&D Intern - Software Defined Infrastructures (SDI)</li>
 				<li>Tasks:
 					<br> - Developed a NETCONF load generator to simulate configuration traffic and test system performance.
