--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<p>Hello, I'm Jan Hendrik</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/ava2.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I am interested in<br><span id="typed"></span></h1>
@@ -81,7 +81,7 @@
 				<li><a href="https://www.ericsson.com">Ericsson - Sweden</a></li>
 				<li>R&D Intern - Software Defined Infrastructures (SDI)</li>
 				<li>Tasks:
-					<br> - Developed a NETCONF load generator to simulate configuration traffic and test system performance.
+					<br> - Developed a NETCONF load generator to simulate traffic and test system performance.
 					<br> - Analyzed process dependencies in a large-scale system using statistical methods.
 					<br> - Applied techniques such as Granger causality tests, VAR models, and L1/L2 regularized regression for dependency analysis.</li>
 			</ul>
@@ -161,7 +161,7 @@
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Network communication</li>
-				<li>Routing & Switching/ BGP / UDP & TCP / IPv4 & IPv6 / EVPN-VXLAN / NETCONF</li>
+				<li>Routing & Switching / BGP / UDP & TCP / IPv4 & IPv6 / EVPN-VXLAN / NETCONF</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Systems</li>
