--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<p>
 					I have a strong background in network engineering, with experience in automation, IPv6 deployment, and infrastructure management. I enjoy working on innovative solutions that improve efficiency and scalability. Beyond my technical skills, I’m interested in management and entrepreneurship, always looking for ways to improve teamwork and decision-making.
 					In my free time, I like traveling, playing tennis, and learning about psychology and languages.
-					I actively live out of my comfort zone and tend to be idealistic and megalomaniacal.
+					I actively live out of my comfort zone and tend to be idealistic and big-picture oriented.
 					<br><br>I'm currently located in Helsinki.
 				</p>
 			</div>
